--- a/style.css
+++ b/style.css
@@ -64,3 +64,79 @@ textarea#text_area {
   font-family: 'Arial', sans-serif;
   font-size: 16px;
 }
+
+#modal {
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+#modal-content {
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #666;
+  width: 80%;
+  background-color: #fefefe;
+  border-radius: 1rem;
+}
+
+#modal-header {
+  padding: 2px 16px;
+}
+
+#modal-body {
+  padding: 2px 16px;
+}
+
+#modal-footer {
+  padding: 2px 16px;
+}
+
+#modal-close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+#modal-close:hover,
+#modal-close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#modal-ok {
+  padding: 10px 20px;
+  background-color: #5cb85c;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+#modal-ok:hover {
+  background-color: #4cae4c;
+}
+
+#modal-cancel {
+  padding: 10px 20px;
+  background-color: #d9534f;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+#modal-cancel:hover {
+  background-color: #c9302c;
+}
